# swagger_output.json
@@ -2033,6 +2033,84 @@
         }
       }
     },
+    "/api/order/ecpayCheckout": {
+      "post": {
+        "tags": [
+          "Screen"
+        ],
+        "summary": "所選擇電影可上映的日期",
+        "description": "傳入screenId，來得到該電影的可訂票日期",
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "screenId": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              }
+            },
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "回傳範例資料",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "自行填寫"
+                },
+                "data": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "date": {
+                        "type": "string",
+                        "example": "5/20"
+                      },
+                      "screenId": {
+                        "type": "array",
+                        "items": {
+                          "type": "string"
+                        }
+                      }
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/order/ecpayCheckout/return": {
+      "post": {
+        "tags": [],
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/api/order/ecpayCheckout/checkComplete": {
+      "post": {
+        "tags": [],
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
     "/api/order/getMemberOrder": {
       "get": {
         "tags": [
@@ -2043,6 +2121,72 @@
         "parameters": [
           {
             "name": "memberId\r",
+            "in": "query"
+          },
+          {
+            "name": "obj",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "screenId": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              }
+            },
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "回傳範例資料",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "自行填寫"
+                },
+                "data": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "date": {
+                        "type": "string",
+                        "example": "5/20"
+                      },
+                      "screenId": {
+                        "type": "array",
+                        "items": {
+                          "type": "string"
+                        }
+                      }
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/order/getOrderData": {
+      "get": {
+        "tags": [
+          "Screen"
+        ],
+        "summary": "所選擇電影可上映的日期",
+        "description": "傳入screenId，來得到該電影的可訂票日期",
+        "parameters": [
+          {
+            "name": "orderId\r",
             "in": "query"
           },
           {
